# yolov8_ros

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: yolov8_ros.launch  yolov8_ros_pose.launch  yolov8_ros_segmentation.launch  yolov9_ros.launch
msg/: BoundingBox2D.msg  Detection.msg  DetectionArray.msg  KeyPoint2D.msg  KeyPoint2DArray.msg  KeyPoint3DArray.msg  Mask.msg  Pose2D.msg
src/: yolov8_ros_node
