<?xml version="1.0"?>
<package format="2">
  <name>yolov8_ros</name>
  <version>0.1.0</version>
  <description>The yolov8_ros package</description>

  <maintainer email="rodrigo.serra@tecnico.ulisboa.pt">Rodrigo Serra</maintainer>

  <license>MIT</license>

  <url type="website"></url>

  <author email="rodrigo.serra@tecnico.ulisboa.pt">Rodrigo Serra</author>
  <author></author>



  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_filters</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
